Bug 118036 - FILEOPEN: horizontal line in background is missing
Summary: FILEOPEN: horizontal line in background is missing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Luke Deller
URL:
Whiteboard: target:6.4.0 target:6.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-imageHandling
  Show dependency treegraph
 
Reported: 2018-06-06 13:33 UTC by Xisco Faulí
Modified: 2020-05-30 04:34 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (62.21 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2018-06-06 13:33 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.1 (73.83 KB, image/png)
2018-06-06 13:34 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-06-06 13:33:31 UTC
Created attachment 142564 [details]
sample file

Steps to reproduce:
1. Open attached document

-> There should be an horizontal blue line above the black line. it's missing. See attached image.

Reproduced in

Version: 6.1.0.0.beta1+
Build ID: 8b96445766efe237eb47608ade6c147673466e2e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-06-06 13:34:20 UTC
Created attachment 142565 [details]
comparison MSO 2010 and LibreOffice 6.1
Comment 2 Xisco Faulí 2018-06-06 13:35:47 UTC
Regression introduced by:

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2018-05-11 00:22:06 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-05-12 10:07:09 +0200
commit 8484e52675052848d2d3ffe07378ce2ad29fd288 (patch)
tree 61745cc72ae36c6a04572021e6ccac1638a12c35
parent 3e2fdcf48055572dd0f6bb7d73b14c1832622f24 (diff)
tdf#117427 missing API for determining and loading linked graphic
This adds 2 properties to GraphicDescriptor:
"Linked" - to indicate if the graphic is a linked one
"OriginURL" - the URL of the location from where the graphic was
or will be loaded (and is linked to)

Additionally GraphicProvider was extended with a "LoadAsLink"
(media)property, which can be passed using queryGraphic method.
If "LoadAsLink" is set to true, then the Graphic will be created
as a linked one.

In addition the tests for this API was added to VCL (home of this
API implementors).

Bisected with: bibisect-linux64-6.1

Adding Cc: to Tomaž Vajngerl
Comment 3 Xisco Faulí 2019-05-29 20:54:18 UTC Comment hidden (obsolete)
Comment 4 Xisco Faulí 2019-10-22 10:26:51 UTC
Still reproducible in

Version: 6.4.0.0.alpha1+
Build ID: de4839e66d3d195315729b95cc144cdab96b6e74
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

after https://cgit.freedesktop.org/libreoffice/core/commit/?id=6369cab9b1e16275c8700692bb717aec3c42d346
Comment 5 Xisco Faulí 2019-10-22 10:32:24 UTC
Hi Luke,
since you commit < https://cgit.freedesktop.org/libreoffice/core/commit/?id=6369cab9b1e16275c8700692bb717aec3c42d346 > fixed bug 120508 and bug 118140, I thought you might be interested in this issue...
Comment 6 Luke Deller 2019-10-28 11:43:07 UTC
Thanks Xisco.

I see a strange behaviour, which I can reproduce even after this file is converted to odp:
1. Open the file from this item (original pptx, or converted to odp)
2. "View" menu -> "Master Slide"
3. Click on the fat grey bar at the bottom of the slide
4. Side bar -> "Properties" -> "Area": see under "Transparency" there is a slider at 0%
5. Move this transparency slider to the right a bit, then back left to 0% again.
6. Problem is fixed!

(I'm testing with a recent 6.4.0.0 alpha build)
Comment 8 Xisco Faulí 2019-11-04 10:34:42 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: fa7f07d23de31e5f1660a643d83ca8a2e565f69c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Luke Deller, thanks for fixing this issue. Should it be closed as RESOLVED FIXED ?
Comment 9 Luke Deller 2019-11-04 11:32:42 UTC
Yes I think we can close it as fixed.  Thanks for testing!
Comment 10 Commit Notification 2019-11-08 08:20:43 UTC
Luke Deller committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/cd5e86eba163cab14e1d4149dde4513fbe252340

tdf#118036 Fix IsTransparent for unloaded graphics

It will be available in 6.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.