vcl/source/gdi/impgraph.cxx
@@ -545,10 +545,11 @@ void ImpGraphic::ImplSetPrepared(bool bAnimated, const Size* pSizeHint)
         maSwapInfo.maPrefSize = *pSizeHint;
         maSwapInfo.maPrefMapMode = MapMode(MapUnit::Map100thMM);
     }
-    else
+
+    GraphicDescriptor aDescriptor(aMemoryStream, nullptr);
+    if (aDescriptor.Detect(true))
     {
-        GraphicDescriptor aDescriptor(aMemoryStream, nullptr);
-        if (aDescriptor.Detect(true))
+        if (!pSizeHint)
         {
             // If we have logic size, work with that, as later pixel -> logic
             // conversion will work with the output device DPI, not the graphic
@@ -564,14 +565,15 @@ void ImpGraphic::ImplSetPrepared(bool bAnimated, const Size* pSizeHint)
                 maSwapInfo.maPrefSize = aDescriptor.GetSizePixel();
                 maSwapInfo.maPrefMapMode = MapMode(MapUnit::MapPixel);
             }
-
-            maSwapInfo.maSizePixel = aDescriptor.GetSizePixel();
         }
+
+        maSwapInfo.maSizePixel = aDescriptor.GetSizePixel();
+        maSwapInfo.mbIsTransparent = aDescriptor.IsTransparent();
+        maSwapInfo.mbIsAlpha = aDescriptor.IsAlpha();
     }
+
     maSwapInfo.mnAnimationLoopCount = 0;
     maSwapInfo.mbIsEPS = false;
-    maSwapInfo.mbIsTransparent = false;
-    maSwapInfo.mbIsAlpha = false;
     maSwapInfo.mbIsAnimated = bAnimated;
 }
 
